fixed shelf clipping bug on large screen sizes (#1089)
changed it to be a percentage over 1500px screen width

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -250,7 +250,7 @@ nav {
     #shelf {
         position: absolute;
         width: 100%;
-        height: 250px;
+        height: 25%;
         left: 0;
         right: 0;
         bottom: -20px; // Crop SVG slightly
